// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> it renders a Button danger 1`] = `
.c0 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #f6bcc2;
  border-color: #f6bcc2;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  color: #18181c;
  background: #f9d2d6;
  border-color: #f3a6ae;
}

.c0[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c1 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #fff;
  border-color: #f6bcc2;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  color: #18181c;
  background: #fff;
  border-color: #f3a6ae;
}

.c1[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    this is a Button 
    danger
     
  </button>
  <button
    class="c1"
  >
    this is a Button 
    danger
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button icon 1`] = `
.c0 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c0:hover {
  color: #8c94a6;
}

<div>
  <button
    class="c0"
  >
    this is a Button 
    icon
     
  </button>
  <button
    class="c0"
  >
    this is a Button 
    icon
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button info 1`] = `
.c0 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #e5f1fe;
  border-color: #e5f1fe;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  color: #18181c;
  background: #fefeff;
  border-color: #cce4fd;
}

.c0[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c1 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #fff;
  border-color: #e5f1fe;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  color: #18181c;
  background: #fff;
  border-color: #cce4fd;
}

.c1[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    this is a Button 
    info
     
  </button>
  <button
    class="c1"
  >
    this is a Button 
    info
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button link 1`] = `
.c0 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  line-height: initial;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  vertical-align: initial;
  background: none;
  border: none;
  border-radius: 0;
}

.c0:focus,
.c0:hover,
.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <button
    class="c0"
  >
    this is a Button 
    link
     
  </button>
  <button
    class="c0"
  >
    this is a Button 
    link
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button primary 1`] = `
.c0 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
  border-color: #004a7b;
}

.c0[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c1 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #fff;
  border-color: #005994;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  color: #18181c;
  background: #fff;
  border-color: #004a7b;
}

.c1[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    this is a Button 
    primary
     
  </button>
  <button
    class="c1"
  >
    this is a Button 
    primary
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button secondary 1`] = `
.c0 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
  border-color: #dbe2e9;
}

.c0[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c1 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #fff;
  border-color: #ebeff3;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  color: #18181c;
  background: #fff;
  border-color: #dbe2e9;
}

.c1[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    this is a Button 
    secondary
     
  </button>
  <button
    class="c1"
  >
    this is a Button 
    secondary
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button success 1`] = `
.c0 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #e0f2bd;
  border-color: #e0f2bd;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  color: #18181c;
  background: #eaf6d2;
  border-color: #d6eea8;
}

.c0[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c1 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #fff;
  border-color: #e0f2bd;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  color: #18181c;
  background: #fff;
  border-color: #d6eea8;
}

.c1[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    this is a Button 
    success
     
  </button>
  <button
    class="c1"
  >
    this is a Button 
    success
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button warning 1`] = `
.c0 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #fee5ad;
  border-color: #fee5ad;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  color: #18181c;
  background: #feedc6;
  border-color: #fedd94;
}

.c0[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c1 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #fff;
  border-color: #fee5ad;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  color: #18181c;
  background: #fff;
  border-color: #fedd94;
}

.c1[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    this is a Button 
    warning
     
  </button>
  <button
    class="c1"
  >
    this is a Button 
    warning
     
  </button>
</div>
`;

exports[`<Button /> renders 1`] = `
.c0 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  color: #fff;
  background: #07f;
  border-color: #005fcd;
}

.c0[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    A button
  </button>
</div>
`;

exports[`<Button /> renders a small button 1`] = `
.c0 {
  display: inline-block;
  padding: 0.5rem 1.25rem;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  color: #fff;
  background: #07f;
  border-color: #005fcd;
}

.c0[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    A button
  </button>
</div>
`;
